add picture folder and index.html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,50 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
         crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <title>kim's room</title>
+    <title>PALM FACTORY</title>
+    <style>
+            .center {
+                text-align: center;
+            }
+        </style>
+    
 
 </head>
 
 <body>
-    <div>
+    <div class="center">
+        <h1>SMART Home</h1>
+    </div>
+    <div class='container fluid content'>
+        <div class='row'>
+            <div class="col-6 center">
+                <img src="./pictures/alarm.png">
+                <h2>Buzzer</h2>
+                
+                <img src="./pictures/door.png">
+                <h2>Door</h2>
+            </div>
+            <hr>
+            <div class="col-6 center">
+                <img src="./pictures/LED.png">
+                <h2>Light</h2>
+
+                <img src="./pictures/AC.png">
+                <h2>Air Conditoner</h2>
+            </div>
+
+        </div>
+        <hr>
+        <div class='row'>
+
+        </div>
+    </div>
+
+
+
+
+
+    <!-- <div>
         <h1 class='text-center'>Kim's chat room</h1>
         <div class="container">
             <div class="border border-danger">
@@ -31,7 +69,7 @@
                 Send
             </button>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- <h1 class="text-center">Kim's diary</h1>
