--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+
     <div class="cb">
         <h4 class="image">PALM FACTORY
             <img src="https://png.icons8.com/metro/26/000000/palm-tree.png" style="margin-left: 5pt">
@@ -30,30 +31,31 @@
     </div>
     <div class="bg">
         <div class="center">
-        <h1 class="image">SMART Home</h1>
-        <h3>Feel at ease with us</h3>
+            <div class="a b">
+                <label class="image" style="color: aliceblue">SMART HOME</label>
+            </div>
+            <h1 style="color: aliceblue" class="a c">Feel at ease with us</h1>
         </div>
     </div>
-    <hr>
     <div class='container fluid content'>
         <div class='row '>
             <div class="col-6 center border-right">
                 <img src="./pictures/alarm.png" class="image">
                 <br>
-              <div class = "nm">
-                    <h4 style ="margin-right: 10px">Buzzer</h4>
+                <div class="nm">
+                    <h4 style="margin-right: 15px">Buzzer</h4>
                     <input type="checkbox" checked data-toggle="toggle">
-              </div>
-                
+                </div>
+
 
             </div>
             <div class="col-6 center">
                 <img src="./pictures/door.png" class="image">
                 <br>
-                <div class = "nm">
-                        <h4 style="margin-right: 10px">Door</h4>
-                        <input type="checkbox" checked data-toggle="toggle">
-                  </div>
+                <div class="nm">
+                    <h4 style="margin-right: 15px">Door</h4>
+                    <input type="checkbox" checked data-toggle="toggle">
+                </div>
             </div>
         </div>
         <hr>
@@ -61,84 +63,45 @@
             <div class="col-6 center">
                 <img src="./pictures/LED.png" class="image">
                 <br>
-                <div class = "nm">
-                        <h4 style="margin-right: 10px">Light</h4>
-                        <input type="checkbox" checked data-toggle="toggle">
-                  </div>
+                <div class="nm">
+                    <h4 style="margin-right: 15px">Light</h4>
+                    <input type="checkbox" checked data-toggle="toggle">
+                </div>
             </div>
             <div class="col-6 center border-left">
                 <img src="./pictures/AC.png" class="image">
                 <br>
-                <div class = "nm">
-                        <h4 style="margin-right: 10px">Air Condition</h4>
-                        <input type="checkbox" checked data-toggle="toggle">
-                  </div>
+                <div class="nm">
+                    <h4 style="margin-right: 15px">Air Condition</h4>
+                    <input type="checkbox" checked data-toggle="toggle">
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-4 ta image2 border-right">
+                <h2>Temperature</h2>
+                <h3>23°C</h3>
+            </div>
+            <div class="col-4 ta image2">
+                <h2>Humidity</h2>
+                <h3>5000</h3>
+            </div>
+            <div class="col-4 ta image2 border-left">
+                <h2>Light Intensity</h2>
+                <h3>1000 cd</h3>
             </div>
         </div>
         <hr>
     </div>
-    </div>
-
-
-
-
-
-    <!-- <div>
-        <h1 class='text-center'>Kim's chat room</h1>
-        <div class="container">
-            <div class="border border-danger">
-                <div class="page" id= 'box'>
-
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="text-center">
-            <input id="text-input" type="text" placeholder="input" class = "long">
-            <button id="send-button" class="btn btn-primary">
-                Send
-            </button>
-        </div>
+    <!-- <div class="center">
+        <div class="container"></div>
+        <h2>fwef</h2>
     </div> -->
 
 
-    <!-- <h1 class="text-center">Kim's diary</h1>
-    <br>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-6 text-center">
-
-                <div class="form-group" style="text-align: left">
-                    <label>หัวข้อ</label>
-                    <input class="form-control" id="input1" aria-describedby="emailHelp" placeholder="">
-
-                </div>
-                <div class="form-group" style="text-align: left">
-                    <label>รายละเอียด</label>
-                    <input class="form-control" id="input2" placeholder="">
-                </div>
-
-                <button id='add-button' class="btn btn-primary">เพิ่ม</button>
-
-            </div>
-            <div class="col-6">
-                <div class="border border-primary">
-                    <div class="page" id='box'>
-
-                    </div>
-                </div>
-
-            </div>
 
 
-        </div> -->
-
-
-    <!-- <h1 id="header">Hello, world!</h1>
-    </div>
-    <div id="box"></div>
-    <button id="append-button">Append</button>
-    <button id="change-button">+1</button> -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
