--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <br>
               <div class = "nm">
                     <h4 style ="margin-right: 10px">Buzzer</h4>
-                    <input type="checkbox" checked data-toggle="toggle">
+                    <input type="checkbox" checked data-toggle="toggle" id="buzzer-toggle">
               </div>
                 
 
@@ -52,7 +52,7 @@
                 <br>
                 <div class = "nm">
                         <h4 style="margin-right: 10px">Door</h4>
-                        <input type="checkbox" checked data-toggle="toggle">
+                        <input type="checkbox" checked data-toggle="toggle" id="door-toggle">
                   </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
                 <br>
                 <div class = "nm">
                         <h4 style="margin-right: 10px">Light</h4>
-                        <input type="checkbox" checked data-toggle="toggle">
+                        <input type="checkbox" checked data-toggle="toggle" id="led-toggle">
                   </div>
             </div>
             <div class="col-6 center border-left">
@@ -71,7 +71,7 @@
                 <br>
                 <div class = "nm">
                         <h4 style="margin-right: 10px">Air Condition</h4>
-                        <input type="checkbox" checked data-toggle="toggle">
+                        <input type="checkbox" checked data-toggle="toggle" id="air-toggle">
                   </div>
             </div>
         </div>
