--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
     <link rel="stylesheet" href="./style.css">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <title>PALM FACTORY</title>
-    <style>
-        .center {
-            text-align: center;
-        }
-    </style>
-
-
 </head>
 
 <body>
@@ -32,72 +25,110 @@
     <div class="bg">
         <div class="center">
             <div class="a b">
-                <label class="image" style="color: aliceblue">SMART HOME</label>
+                <label class="image" style="color: aliceblue">BATH-BOX</label>
             </div>
-            <h1 style="color: aliceblue" class="a c">Feel at ease with us</h1>
+            <h1 style="color: aliceblue" class="a c">Find comfort you deserve</h1>
         </div>
+        <br>
+        <br>
     </div>
-    <div class='container fluid content'>
-        <div class='row '>
-            <div class="col-6 center border-right">
-                <img src="./pictures/alarm.png" class="image">
-                <br>
-                <div class="nm">
-                    <h4 style="margin-right: 15px">Buzzer</h4>
-                    <input type="checkbox" checked data-toggle="toggle">
-                </div>
-
-
-            </div>
-            <div class="col-6 center">
-                <img src="./pictures/door.png" class="image">
-                <br>
-                <div class="nm">
-                    <h4 style="margin-right: 15px">Door</h4>
-                    <input type="checkbox" checked data-toggle="toggle">
-                </div>
-            </div>
-        </div>
+    <div class='container fluid'>
+        <br>
         <hr>
+        <br>
         <div class='row'>
-            <div class="col-6 center">
-                <img src="./pictures/LED.png" class="image">
+            <div class="col-lg-6 ">
+                <img src="https://png.icons8.com/ios/100/000000/empty-box-filled.png" style="margin-left: 210px">
+                <br><br>
+                <h4 style="margin-left: 186px">Box No.1</h4>
                 <br>
-                <div class="nm">
-                    <h4 style="margin-right: 15px">Light</h4>
-                    <input type="checkbox" checked data-toggle="toggle">
+                <h4 style="margin-left: 186px">Usage time:</h4>
+                <br>
+                <div class="flex">
+                    <h4 style="margin: 15px">Status: </h4>
+                    <h2>
+                        <span class="badge badge-success">Empty</span>
+                    </h2>
                 </div>
+                <div class="flex">
+                    <h4 style="margin: 15px">Usable: </h4>
+                    <input type="checkbox" checked data-toggle="toggle" data-on="Enable" data-off="disabled" data-onstyle="success" data-offstyle="danger">
+                </div>
+
+
             </div>
-            <div class="col-6 center border-left">
-                <img src="./pictures/AC.png" class="image">
+            <div class="col-lg-6 ">
+                <img src="https://png.icons8.com/ios/100/000000/empty-box-filled.png" style="margin-left: 210px">
+                <br><br>
+                <h4 style="margin-left: 186px">Box No.1</h4>
                 <br>
-                <div class="nm">
-                    <h4 style="margin-right: 15px">Air Condition</h4>
-                    <input type="checkbox" checked data-toggle="toggle">
+                <h4 style="margin-left: 186px">Usage time:</h4>
+                <br>
+                <div class="flex">
+                    <h4 style="margin: 15px">Status: </h4>
+                    <h2>
+                        <span class="badge badge-success">Empty</span>
+                    </h2>
                 </div>
+                <div class="flex">
+                    <h4 style="margin: 15px">Usable: </h4>
+                    <input type="checkbox" checked data-toggle="toggle" data-on="Enable" data-off="disabled" data-onstyle="success" data-offstyle="danger">
+                </div>
+
+
             </div>
         </div>
-        <hr>
+        <br><br><br>
         <div class="row">
-            <div class="col-4 ta image2 border-right">
-                <h2>Temperature</h2>
-                <h3>23°C</h3>
+            <hr>
+            <div class="col-lg-6">
+                <img src="https://png.icons8.com/ios/100/000000/empty-box-filled.png" style="margin-left: 210px">
+                <br><br>
+                <h4 style="margin-left: 186px">Box No.1</h4>
+                <br>
+                <h4 style="margin-left: 186px">Usage time:</h4>
+                <br>
+                <div class="flex">
+                    <h4 style="margin: 15px">Status: </h4>
+                    <h2>
+                        <span class="badge badge-success">Empty</span>
+                    </h2>
+                </div>
+                <div class="flex">
+                    <h4 style="margin: 15px">Usable: </h4>
+                    <input type="checkbox" checked data-toggle="toggle" data-on="Enable" data-off="disabled" data-onstyle="success" data-offstyle="danger">
+                </div>
+
+
             </div>
-            <div class="col-4 ta image2">
-                <h2>Humidity</h2>
-                <h3>5000</h3>
-            </div>
-            <div class="col-4 ta image2 border-left">
-                <h2>Light Intensity</h2>
-                <h3>1000 cd</h3>
+            <div class="col-lg-6">
+                <img src="https://png.icons8.com/ios/100/000000/empty-box-filled.png" style="margin-left: 210px">
+                <br><br>
+                <h4 style="margin-left: 186px">Box No.1</h4>
+                <br>
+                <h4 style="margin-left: 186px">Usage time:</h4>
+                <br>
+                <div class="flex">
+                    <h4 style="margin: 15px">Status: </h4>
+                    <h2>
+                        <span class="badge badge-success">Empty</span>
+                    </h2>
+                </div>
+                <div class="flex">
+                    <h4 style="margin: 15px">Usable: </h4>
+                    <input type="checkbox" checked data-toggle="toggle" data-on="Enable" data-off="disabled" data-onstyle="success" data-offstyle="danger">
+                </div>
+
+
             </div>
         </div>
-        <hr>
     </div>
-    <!-- <div class="center">
-        <div class="container"></div>
-        <h2>fwef</h2>
-    </div> -->
+
+
+    <br>
+    <hr>
+    <br>
+    </div>
 
 
 
@@ -110,6 +141,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
 
     <script src="./app.js"></script>
 </body>
